--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,25 +11,31 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    timeout-minutes: 120
+
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
-      - name: Set up environment variables
-        run: echo "API_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+    - name: Set up environment variables
+      run: echo "API_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
 
-      - name: Build and test with Maven
-        run: mvn -B clean verify -Dgroups=integration
+    - name: Build and test with Maven
+      run: mvn -B clean verify -Dgroups=integration
