--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,21 +45,21 @@ jobs:
       if: always()
       continue-on-error: true
       with:
-        ref: gh-pages
-        path: gh-pages
+        ref: main
+        path: main
 
     - name: Build test report
       uses: simple-elf/allure-report-action@v1.7
       if: always()
       with:
-        gh_pages: gh-pages
+        gh_pages: main
         allure_history: allure-history
         allure_results: build/allure-results
 
     - name: Publish test report
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-main@v3
       if: always()
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_branch: gh-pages
+        publish_branch: main
         publish_dir: allure-history
